- Fewer calls to other functions (use of the new cumulative sum function)

File: readloop.c
----------------

- Fixed buggy handling of malformed Tucson format series that have
  no data and no stop marker. Previously, this hypothetical case
  could have caused a read from a location just outside the array
  bounds. However, in most cases that would probably not have been a
  problem.

* CHANGES IN dplR VERSION 1.5.8

File: tbrm.Rd
---------------
- Improved (slightly) the trbm() examples.

Files: exactmean.R, gini.coef.R, sens1.R, sens2.R, tbrm.R
---------------------------------------------------------

- Changed calls to .C (where we use DUP = FALSE) so that the
  binding of NaN will not change, fixing multiple instances of a bug
  in dplR code revealed by changes in recent R development versions.
  We were accidentally breaking CRAN's "malicious or anti-social"
  policy. Thanks to Professor Brian D. Ripley for reporting.

  Now R CMD check --as-cran passes fine.

File: DESCRIPTION

- Added Jacob Cecile as a contributor

File: detrend.R
---------------

- Adjusted for the changes in detrend.series(),
  i.e. added the argument constrain.modnegexp.

File: detrend.series.R
----------------------

- Fixed a bug where RWI could go negative. Thanks to Jacob Cecile for
  reporting the bug and contributing a proposed solution.
- A new argument: constrain.modnegexp.  It is now possible to constrain
  the modified negative exponential function to non-negative values at
  infinity.
- Warn if fit is not all positive (backup methods will be used)
- Use simpler but equivalent rules for checking validity of ModNegExp fit
- Small optimizations (rep.int; save and reuse length of input)

File: redfit.c
--------------

- Avoid possibly buggy behavior in the unlikely case that cbind()
  or length() have been redefined by the user

File: redfit.R
--------------

- Use slightly faster .rowSums() instead of rowSums()
- Simplified arithmetic expressions in getdof(): no multiplying by 2